Fixed display issue on iPhone devices by removing max-width:100% on main-panel

--- a/public/css/material-dashboard.css
+++ b/public/css/material-dashboard.css
@@ -925,7 +925,6 @@ h2.title {
   width: calc(100% - 260px);
   -webkit-transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
-  max-height: 100%;
 }
 
 .main-panel > .content {
