--- a/resources/assets/sass/md/_sidebar-and-main-panel.scss
+++ b/resources/assets/sass/md/_sidebar-and-main-panel.scss
@@ -265,7 +265,7 @@
     float: right;
     width: $sidebar-width;
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
-    max-height: 100%;
+    //max-height: 100%;
 
     > .content{
         margin-top: 70px;
